src/partials/contact/contact.css
.contact {
    max-width: 80rem;

    min-height: 15em;
    margin-right: auto;
    margin-left: auto;
    padding-right: 1.5rem;
    padding-left: 1.5rem;
    background: var(--white);
    color: var(--black);
}

.contact-title {
    display: block;
    width: 100%;
}

.contact-list {
    display: flex;
    flex-direction: column;
    font-size: 2rem;
    text-align: left;
}

.contact-item {
    display: flex;
    padding: 0.5rem 0;
}

.contact-item::after {
    display: none;
}

.contact-item > img {
    width: 1em;
    margin-top: 0.3rem;
    margin-right: 1rem;
}

@media (--l-viewport) {
    .contact {
        min-height: 7.5em;
    }

    .contact-list {
        display: flex;
        flex-direction: row;
        flex-grow: 1;
        align-items: center;
        justify-content: space-between;
        width: 100%;
        max-width: 100%;
    }
}

